2011-10-15  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Other Configuration Variables): USE_SECTIONS is not
	used anymore, the same effect is obtained by setting USE_NODES to false.

2011-10-14  Karl Berry  <karl@gnu.org>

	* lib/substring.c: remove, only used in C makeinfo, no longer built.
	Leaving us with just xexit in lib, but that still seems useful.

2011-10-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Three Arguments): same requirements as node names.

2011-10-13  Patrice Dumas  <pertusus@free.fr>

	* info-stnd.texi: change @itemx to a missing @item.
	* po/POTFILES.in, configure.ac, po_document/POTFILES.in: remove references
	to makeinfo/ and texi2html/.
	* doc/Makefile.am (MAKEINFO, man_rule_0): use tp/texi2any.pl or 
	tp/makeinfo to regenerate info and man pages.

2011-10-11  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_INIT): version 4.13.90.
	(AM_INIT_AUTOMAKE): dist-xz rather than lzma.

	* configure.ac (AC_CONFIG_SRCDIR): look for info.c, not makeinfo.c.
	(AC_CONFIG_FILES),
	* Makefile.am (SUBDIRS): remove makeinfo.
	(DIST_SUBDIRS): no need.

2011-10-01  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Generic Translator texi2any/makeinfo): adapt to
	the new implementation in tp/.
	* configure.ac, tp/Makefile.am: add an automake conditional to avoid 
	doing tp tests if dependencies are missing.

2011-09-30  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (texi2any Output Customization), 
	doc/texi2oldapi.texi: archive the texi2any Output Customization
	chapter in texi2oldapi.texi.  Reduce the text in texinfo.txi
	to what should be stable.

2011-09-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (GNU Sample Texts): change example to be
	without cover texts, since that is by far the most common case.
	Update years.

2011-09-26  Patrice Dumas  <pertusus@free.fr>

	* Makefile.am (SUBDIRS, DIST_SUBDIRS), configure.ac, po*/POTFILES.in: 
	build and distribute the Parser in tp.  Don't build texi2html, but